--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -42,7 +42,7 @@
                             <input
                                     type="text"
                                     id="username"
-                                    name="userName"
+                                    name="identifier"
                             class="form-control"
                             placeholder="Enter email address"
                             />
