add html files after registration and login function added/

--- a/src/main/resources/templates/news.html
+++ b/src/main/resources/templates/news.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>RAC Ktm Mid-Town</title>
+    <title>RAC Ktm Mid-Town News</title>
     <style>
         /* Basic Reset */
         body, h2, a, img {
@@ -126,28 +126,28 @@
 
 <div class="navbar">
     <ul>
-        <li class="nav-item"><a class="nav-link" href="#">Home</a></li>
+        <li class="nav-item"><a class="nav-link" href="/rac/homePage">Home</a></li>
         <li class="nav-item"><a class="nav-link" href="/rac/events">Events</a></li>
-        <li class="nav-item"><a class="nav-link" href="/rac/news">News</a></li>
+        <li class="nav-item"><a class="nav-link" href="#">News</a></li>
         <li class="nav-item"><a class="nav-link" href="/rac/podcast">Podcast</a></li>
         <li class="nav-item"><a class="nav-link" href="/rac/about">About</a></li>
     </ul>
     <form method="post" role="form" th:action="@{/rac/login}" class="form">
-    <div class="form-inline">
-        <div class="form-controls">
-            <input class="form-control" type="text" name="identifier" placeholder="Username">
-            <input class="form-control" type="password" name="password" placeholder="Password">
+        <div class="form-inline">
+            <div class="form-controls">
+                <input class="form-control" type="text" name="identifier" placeholder="Username">
+                <input class="form-control" type="password" name="password" placeholder="Password">
+            </div>
+            <div class="login-group">
+                <button class="btn">Login</button>
+                <a class="signup-link" href="/rac/register">Not registered? Sign up</a>
+            </div>
         </div>
-        <div class="login-group">
-            <button class="btn">Login</button>
-            <a class="signup-link" href="/rac/register">Not registered? Sign up</a>
-        </div>
-    </div>
     </form>
 </div>
 
 <div class="container">
-    <h1>Welcome to Our Application!</h1>
+    <h1>Welcome to Our News Page!</h1>
     <p>Feel free to explore the features of our application!</p>
 </div>
 </body>
