--- a/src/main/resources/templates/about.html
+++ b/src/main/resources/templates/about.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>RAC Ktm Mid-Town</title>
+    <title>RAC Ktm Mid-Town About Us</title>
     <style>
         /* Basic Reset */
         body, h2, a, img {
@@ -126,11 +126,11 @@
 
 <div class="navbar">
     <ul>
-        <li class="nav-item"><a class="nav-link" href="#">Home</a></li>
+        <li class="nav-item"><a class="nav-link" href="/rac/homePage">Home</a></li>
         <li class="nav-item"><a class="nav-link" href="/rac/events">Events</a></li>
         <li class="nav-item"><a class="nav-link" href="/rac/news">News</a></li>
         <li class="nav-item"><a class="nav-link" href="/rac/podcast">Podcast</a></li>
-        <li class="nav-item"><a class="nav-link" href="/rac/about">About</a></li>
+        <li class="nav-item"><a class="nav-link" href="#">About</a></li>
     </ul>
     <form method="post" role="form" th:action="@{/rac/login}" class="form">
     <div class="form-inline">
@@ -147,7 +147,7 @@
 </div>
 
 <div class="container">
-    <h1>Welcome to Our Application!</h1>
+    <h1>Welcome to Our About Us Page</h1>
     <p>Feel free to explore the features of our application!</p>
 </div>
 </body>
