--- a/src/main/resources/templates/registrationPage.html
+++ b/src/main/resources/templates/registrationPage.html
@@ -42,13 +42,13 @@
             margin-left: 20px;
         }
 
-        .nav-link, .signup-link {
+        .nav-link {
             color: white;
             text-decoration: none;
             font-size: 16px;
         }
 
-        .nav-link:hover, .signup-link:hover {
+        .nav-link:hover {
             text-decoration: underline;
         }
 
@@ -110,15 +110,9 @@
             cursor: pointer;
             width: 100%;
         }
-
         .btn:hover {
             background-color: darkgreen;
         }
-
-        .form-inline, .form-controls, .login-group {
-            display: none; /* Hide login components in registration form */
-        }
-
     </style>
 </head>
 <body>
