--- a/src/main/resources/templates/events.html
+++ b/src/main/resources/templates/events.html
@@ -6,6 +6,7 @@
     <title>RAC Ktm Mid-Town Events</title>
     <link rel="stylesheet" href="/css/header.css">
     <link rel="stylesheet" href="/css/navbar.css">
+    <link rel="stylesheet" href="/css/footer.css">
     <style>
         /* Utility classes */
         .container {
@@ -49,5 +50,8 @@
     <h1>Welcome to Our Events Page!</h1>
     <p>Feel free to explore the features of our application!</p>
 </div>
+<footer class="footer">
+    <p>© 2024 Rotaract Club of Kathmandu Mid-Town. All rights reserved.</p>
+</footer>
 </body>
 </html>
