--- a/src/main/resources/static/css/navbar.css
+++ b/src/main/resources/static/css/navbar.css
@@ -6,6 +6,11 @@
     justify-content: space-between;
     align-items: center;
     padding: 10px 20px;
+    position: fixed; /* Fixed position */
+    top: 58px; /* Adjust based on header height */
+    left: 0;
+    width: 100%; /* Full width */
+    z-index: 1000; /* Ensure it stays on top */
 }
 
 .nav-item {
@@ -42,7 +47,7 @@
 }
 
 .form-control {
-    margin-right: 10px;
+    margin-right: 22px;
     padding: 5px 10px;
     font-size: 14px;
 }
@@ -51,7 +56,7 @@
     display: flex;
     flex-direction: column;
     align-items: center;
-    margin-left: 8px;
+    margin-right: 25px;
 }
 
 .signup-link {
@@ -65,7 +70,7 @@
     height: 17px;
     line-height: 9px;
     text-align: center;
-    margin-right: 6px;
+    margin-right: 8px;
     margin-top: 6px;
     background-color: green;
     color: white;
