--- a/src/main/resources/templates/about.html
+++ b/src/main/resources/templates/about.html
@@ -32,18 +32,21 @@
         <li class="nav-item"><a class="nav-link" href="/rac/podcast">Podcast</a></li>
         <li class="nav-item"><a class="nav-link" href="#">About</a></li>
     </ul>
-    <form method="post" role="form" th:action="@{/rac/login}" class="form">
-    <div class="form-inline">
-        <div class="form-controls">
-            <input class="form-control" type="text" name="identifier" placeholder="Username">
-            <input class="form-control" type="password" name="password" placeholder="Password">
-        </div>
-        <div class="login-group">
-            <button class="btn">Login</button>
-            <a class="signup-link" href="/rac/register">Not registered? Sign up</a>
-        </div>
+    <!-- Display based on login status -->
+    <div th:if="${!isLoggedIn}">
+        <form method="post" role="form" th:action="@{/rac/login}" class="form">
+            <div class="form-inline">
+                <div class="form-controls">
+                    <input class="form-control" type="text" name="identifier" placeholder="Username">
+                    <input class="form-control" type="password" name="password" placeholder="Password">
+                </div>
+                <div class="login-group">
+                    <button class="btn">Login</button>
+                    <a class="signup-link" href="/rac/register">Not registered? Sign up</a>
+                </div>
+            </div>
+        </form>
     </div>
-    </form>
 </div>
 
 <div class="container">
