--- a/src/main/resources/static/css/regnavbar.css
+++ b/src/main/resources/static/css/regnavbar.css
@@ -30,6 +30,15 @@
 }
 
 /* Form styling */
+.profile-content {
+    background-color: #f5f5f5;
+    padding: 20px;
+    border-radius: 5px;
+    width: 100%;
+    max-width: 500px; /* Set maximum width for the form */
+    box-shadow: 0 0 15px rgba(0,0,0,0.2);
+}
+
 .form-box {
     background-color: #f5f5f5;
     padding: 20px;
@@ -77,4 +86,22 @@ label {
     margin-bottom: 40px; /* Add margin at the bottom */
     display: flex;
     justify-content: center; /* Center the form box horizontally */
+}
+
+.error-message {
+    position: fixed;
+    top: 50%; /* Place the message at the vertical center of the viewport */
+    left: 50%; /* Place the message at the horizontal center of the viewport */
+    transform: translate(-50%, -50%); /* Center the message */
+    background-color: #ffcccc; /* Red background color */
+    color: #ff0000; /* Red text color */
+    padding: 10px; /* Add padding */
+    border-radius: 5px; /* Add border radius for rounded corners */
+    border: 1px solid #ff0000; /* Red border */
+    z-index: 9999; /* Ensure the message appears on top of other content */
+}
+
+.error-message {
+    color: #ff0000; /* Red warning sign color */
+    font-weight: bold; /* Make the warning sign bold */
 }
