--- a/src/main/resources/templates/podcast.html
+++ b/src/main/resources/templates/podcast.html
@@ -40,7 +40,7 @@
             <span th:text="${session.user.charAt(0)}">U</span> <!-- Displays the first letter of the username -->
         </div>
         <div class="dropdown-menu" id="userDropdown">
-            <a href="/rac/profile">Profile</a>
+            <a th:href="@{/rac/profile(username=${session.user})}">Profile</a>
             <a href="/rac/logout">Logout</a>
         </div>
     </div>
