--- a/src/main/resources/templates/profile.html
+++ b/src/main/resources/templates/profile.html
@@ -37,6 +37,37 @@
 
 <div class="container">
 
+  <div class="profile-content">
+    <h1>Profile Information</h1>
+    <form th:action="@{/rac/updateProfile}" th:object="${profileResponseDto}" method="post">
+      <!-- Existing User Data -->
+      <div class="form-group">
+        <label for="username">Username</label>
+        <input type="text" class="form-control" id="username" th:field="*{userName}" readonly>
+      </div>
+      <div class="form-group">
+        <label for="name">Name</label>
+        <input type="text" class="form-control" id="name" th:field="*{name}">
+      </div>
+      <div class="form-group">
+        <label for="email">Email</label>
+        <input type="email" class="form-control" id="email" th:field="*{email}">
+      </div>
+      <div class="form-group">
+        <label for="phonenumber">Mobile Number</label>
+        <input type="text" class="form-control" id="phonenumber" th:field="*{phoneNumber}">
+      </div>
+      <!-- Password Verification -->
+      <div class="form-group">
+        <label for="currentPassword">Current Password</label>
+        <input type="password" class="form-control" id="currentPassword" name="currentPassword" required>
+        <!-- Display password error message if there is one -->
+        <p th:if="${passwordError}" th:text="${passwordError}" class="error-message"></p>
+      </div>
+      <button type="submit" class="btn">Update Profile</button>
+    </form>
+  </div>
+
 </div>
 <footer class="footer">
   <p>© 2024 Rotaract Club of Kathmandu Mid-Town. All rights reserved.</p>
